creacion de pantalla asignaturas

--- a/Views/Notas/Evaluaciones.cshtml
+++ b/Views/Notas/Evaluaciones.cshtml
@@ -44,18 +44,19 @@
                 <div class="row">
                     <div class="col-md-3 mb-md-2">
                         <label class="form-label">Código del Profesor</label>
-                        <input type="text" class="form-control" />
+                        <input type="text" class="form-control" value="0011" disabled />
                     </div>
                     <div class="col-md-3 mb-md-2">
                         <label class="form-label">Nombre del Profesor</label>
-                        <input type="text" class="form-control" />
+                        <input type="text" class="form-control" value="Rafael Jeronimo Tellez" disabled />
                     </div>
                     <div class="col-md-3 mb-md-2">
-                        <label class="form-label">Asignatura</label>
+                        <label class="form-label">Seccion</label>
                         <select class="form-control">
                             <option value="">-- Seleccione --</option>
-                            <option value="a1">Computación</option>
-                            <option value="a2">AEP</option>
+                            <option value="a1">A</option>
+                            <option value="a2">B</option>
+                            <option value="a2">C</option>
                         </select>
                     </div>
                     <div class="col-md-3 mb-md-2">
@@ -64,6 +65,15 @@
                             <option value="">-- Seleccione --</option>
                             <option value="a1">Primero</option>
                             <option value="a2">Segundo</option>
+                            <option value="a2">Tercero</option>
+                            <option value="a2">Cuarto</option>
+                            <option value="a2">Quinto</option>
+                            <option value="a2">Sexto</option>
+                            <option value="a2">Septimo</option>
+                            <option value="a2">Octavo</option>
+                            <option value="a2">Noveno</option>
+                            <option value="a2">Decimo</option>
+                            <option value="a2">Undecimo</option>
                         </select>
                     </div>
                 </div>
@@ -87,11 +97,6 @@
                         <div class="row g-2 align-items-center mb-3">
                             <div class="col-12 col-md-4">
                                 <input type="text" class="form-control" placeholder="Buscar estudiante...">
-                            </div>
-                            <div class="col-12 col-md-4">
-                                <select class="form-select">
-                                    <option>Matemáticas 101</option>
-                                </select>
                             </div>
                             <div class="col-12 col-md-4 d-flex flex-wrap gap-2">
                                 <button class="btn btn-primary flex-fill">Ver Estadísticas</button>
